BSH - Add lecture estimated time in blog posts and fix mobile menu misalignments

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --content-size: calc(100vw - 32px);
 }
@@ -1272,14 +1273,17 @@ body:has(main.homepage) .header {
     align-items: center;
     justify-content: center;
     z-index: 999;
+    width: 0vw;
+    overflow: hidden;
     transform: translateX(0);
     visibility: hidden;
-    transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), visibility 0.4s step-end;
+    transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), visibility 0.4s step-end, width 0.4s step-end;
   }
   .header__navigation--open {
     visibility: visible;
     transform: translateX(-100%);
-    transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), visibility 0s step-start;
+    transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), visibility 0s step-start, width 0s step-start;
+    width: 100vw;
   }
   .header__navigation-list {
     flex-direction: column;
@@ -2076,6 +2080,14 @@ body:has(main.tree) .footer {
   font-size: 1.1rem;
   font-weight: 500;
   color: #dbdbdb;
+}
+.blog-post__meta-item .blog-post__reading-time {
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: #dbdbdb;
+}
+.blog-post__meta-item .blog-post__reading-time::before {
+  content: "⏱ ";
 }
 .blog-post__meta-item .blog-post__date-container {
   display: flex;
